monticore-generator/src/test/resources/cocos/invalid/A4020/A4020.mc4
package cocos.invalid.A4020;

grammar A4020 {

 A;

 ast A;

 ast A;


}
